Adding Some Style

--- a/index.html
+++ b/index.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+        <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About me</title>
+         <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>About me</title>
+
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100.
+            .900&display=swap" rel="stylesheet">
+
+
+            <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    
+
+    <header>
+
             <img src="img/logo-96X96.svg" alt="blue origami logo">
 
-><h1>Carlos Salinas</h1>
+        <h1>Carlos Salinas</h1>
 
+    </header>
+   
 <main>
 
 
-<section>
+<section id="hero">
 
 
             <img src="img/avataaars.png" alt=" ava of me">
@@ -29,7 +41,7 @@
 
 </section>
 
-<section>
+<section id="bio">
 
             <p>I want to be.....</p>
 
@@ -47,6 +59,12 @@
 </section>
 
 </main>
+
+<footer>
+   
+    © 2025 - Carlos A Salinas londono
+
+</footer>
 
 
 </body>
