Adding hobbies list

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 
 <section id="bio">
 
+        <h2>Biography:</h2>
+
+        <div>
             <p>I want to be.....</p>
 
              <p>a good developer</p>
@@ -52,6 +55,29 @@
              <P>Programing</P>
 
              <p>Playing the pianio</p>
+        </div>
+
+
+
+</section>
+
+
+<section id="hobbies">
+
+    <h2>hobbies:</h2>
+
+    
+                <ul>
+
+                        <li>building pcs </li>
+                        <li>playing the pianio</li>
+                        <li>reading mystery books</li>
+                        <li>playing the bass</li>
+                        <li>riding my bike</li>
+                        <li>playing games</li>
+                        <li>etc.</li>
+
+                </ul>
 
 
 
