Adding photo gallery

--- a/index.html
+++ b/index.html
@@ -84,6 +84,37 @@
 
 </section>
 
+
+
+<section id="gallery">
+
+        <h2>photo gallery</h2>
+        <hr>
+
+        <figure>
+            <img src="img/kitty1-640w.jpg" alt="cat chilling">
+            <figcaption>miso the cat</figcaption>
+        </figure>
+
+        <hr>
+
+        <figure>
+            <img src="img/music-640w.jpg" alt="my vinyl shelf">
+            <figcaption>my vinyl collection</figcaption>
+        </figure>
+
+        <hr>
+
+        <figure>
+            <img src="img/pc-640w.jpg" alt="pc i built">
+            <figcaption>new pc build</figcaption>
+        </figure>
+    
+</section>
+
+
+
+
 </main>
 
 <footer>
