--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <h2>Contact Us:</h2>
 
       
-        <form id="contactform" name="contactform" method="post" data-netlify="true">
+        <form id="contactForm" name="contactForm" method="post" data-netlify="true">
           <fieldset>
             <legend>Contact Form</legend>
 
@@ -204,7 +204,7 @@
         <li>
                 <input type="radio" id="message-yes" name="reply">
                 <label for="message-yes">Yes, a reply would be nice.</label>
-                
+
         </li>
 
         <li>
