--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-        <html lang="en">
+<html lang="en">
 <head>
          <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,17 +12,38 @@
 
 
             <link href="css/style.css" rel="stylesheet">
+
 </head>
+
+
 <body>
 
-    <header>
+<header>
 
-            <img src="img/logo-96X96.svg" alt="blue origami logo">
+     <nav class="navbar">
 
-        <h1>Carlos Salinas</h1>
+         <div class="logo">
+ 
+          <img src="img/logo-96X96.svg" alt="blue origami bird">
+ 
+          <h1>Carlos Salinas</h1> 
+ 
+     </div>
 
-    </header>
-   
+
+
+    <div class="navbar-links">
+    <ul>
+        <li><a href="#bio">Bio</a></li>
+        <li><a href="#gallery">Gallery</a></li>
+        <li><a href="#lit">Blog</a></li>
+        <li><a href="#contact">Contact Me</a></li>
+    </ul>
+
+    </div>
+
+    </nav>
+
 <main>
 
 
