--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <link href="css/style.css" rel="stylesheet">
             <link href="css/nav.css" rel="stylesheet">
 
+            <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+
 </head>
 
 
@@ -25,9 +27,9 @@
 
          <div class="logo">
  
-          <img src="img/logo-96X96.svg" alt="blue origami bird">
+            <img src="lobster-ct.svg" alt="initial logo">
  
-          <h1>Carlos Salinas</h1> 
+          <h1> All about me</h1> 
  
      </div>
 
@@ -250,7 +252,7 @@
     </section>
    
 
-
+    <a href="#top" class="back-to-top-btn">↑</a>
 
 </main>
 
