added blog imgs and started layout changes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             <ul>
                 <li><a href="#bio">Bio</a></li>
                 <li><a href="#gallery">Gallery</a></li>
-                <li><a href="#lit">Blog</a></li>
+                <li><a href="#lit">A story</a></li>
+                <li><a href="#blog">Blog</a></li>
                 <li><a href="#contact">Contact Me</a></li>
             </ul>
         </div>
@@ -124,6 +125,40 @@
             </p>
     </div>
 </article>
+
+
+
+
+
+
+<section id="Blog">
+    <h2> Blog</h2>
+    <div class="blog img">
+
+        <p>
+            CSS clipping and masking are powerful tools in modern web design. They allow designers to create visually stunning effects by manipulating the boundaries of elements and controlling which parts of an element are visible. Whether you're working on complex layouts, interactive animations, or just looking to enhance the design of your website, understanding how to use clipping and masking can open up new possibilities.
+        </p>
+
+        <figure>
+            <img src="img/flower-640w.jpg" alt="random flower">
+            <figcaption></figcaption>
+        </figure>
+
+        <figure>
+            <img src="img/spring-640w.jpg" alt="water spring">
+            <figcaption></figcaption>
+        </figure>
+
+        <figure>
+            <img src="img/plane.640w.jpg" alt="jet blue">
+           <figcaption></figcaption>
+        </figure>
+    </div>
+</section>
+
+
+
+
 
 <!-- Video Section -->
 <section id="video">
